force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/Sfdc_Accountuser_CreatedFailed__e.object-meta.xml
<CustomObject>
    <description>Published by UdcOnboardingService when Account or Contact creation fails. Org_Sfdc_Id__c and User_Sfdc_Id__c are null (no records committed). Org_Id__c carries the uDC org identifier from the request payload if present.</description>
    <label>Sfdc Accountuser Created Failed</label>
    <pluralLabel>Sfdc Accountuser Created Faileds</pluralLabel>
</CustomObject>