force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/AcctCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AcctCaseSafeID__c</fullName>
    <description>Salesforce Account record Id. Set on success events; null on failure events (no Account committed).</description>
    <label>Acct Case Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>