force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/ContactCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactCaseSafeID__c</fullName>
    <description>Salesforce Contact record Id. Set on success events; null on failure events (no Contact committed).</description>
    <label>Contact Case Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>