force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Machine-readable error code returned to the REST caller (e.g. INVALID_INPUT, ACCOUNT_NOT_FOUND, DUPLICATE_RECORD, VALIDATION_RULE_VIOLATION, SALESFORCE_DML_ERROR).</description>
    <label>Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>