force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Human-readable error message returned to the REST caller (mirrors OnboardingResponse.message). Truncated to 255 chars if the underlying Salesforce error is longer.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>