force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>HTTP status code returned to the REST caller by UdcOnboardingService for this failure (e.g. 400, 404, 409, 422, 500).</description>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>