force-app/main/default/objects/Sfdc_Accountuser_CreatedFailed__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>uDC portal user identifier (Contact.Portal_User_ID__c). Set on success events; null on failure events.</description>
    <label>User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>